/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.common.manager;

/*
Config
*/
option java_package = "io.github.pnoker.api.center.manager";
option java_outer_classname = "QueryProto";
option objc_class_prefix = "Manager";
option java_multiple_files = true;

/*
驱动ID Query
*/
message GrpcDriverQuery {
  /*
  驱动ID
  */
  int64 driver_id = 1;
}

/*
Profile ID Query
*/
message GrpcProfileQuery {
  /*
  Profile ID
  */
  int64 profile_id = 1;
}

/*
Point ID Query
*/
message GrpcPointQuery {
  /*
  Point ID
  */
  int64 point_id = 1;
}

/*
Device ID Query
*/
message GrpcDeviceQuery {
  /*
  Device ID
  */
  int64 device_id = 1;
}



